--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "node src/index.js"
   },
+  "dependencies": {
+    "config": "^3.3.12",
+    "express": "^4.19.2",
+    "mongoose": "^8.6.0"
+  },
   "author": "",
   "license": "ISC"
 }
