--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
     "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^3.1.0",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^3.1.0"
   },
   "scripts": {
     "start": "concurrently --kill-others \"less-watch-compiler --config less-watcher.config.json\" \"react-scripts start\"",
