--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cp -r src/ build/",
+    "build": "rm -rf build/ && cp -r src/ build/",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
